--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
 	<link rel="stylesheet" href="css/libs.min.css">
+	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/header_footer.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -52,7 +54,6 @@
 							<li><a href="#">О нас</a></li>
 							<li><a href="#">Услуги</a></li>
 							<li><a href="#">Галерея</a></li>
-							<li><a href="#">Блог</a></li>
 							<li><a href="#">Контакты</a></li>
 						</ul>
 					</nav>
@@ -67,17 +68,255 @@
 			</div>
 		</div>
 	</header>
-	<footer>
-		<div class="container-fluid">
-			<div class="container">
-				<div class="row footer_top">
-					<div class="col-4">
-						<div class="logotype">
-							<img src="img/logo.png" alt="logotype">
+	<div class="slider">
+		<div class="slide1">
+			<div class="container-fluid">
+				<div class="container">
+					<div class="row">
+						<div class="title">
+							<h1>Центр быстрой починки</h1>
 						</div>
-						<div class="desctiption">
-							<p>Restore is a U.S based computer repair service center. Basically we repair all major brands of PCs,
-								Laptops, Smartphone, Tablet, Flash Drive and Gaming Console devices issues.</p>
+						<div class="description">
+							<p>Просто свяжитесь с нами и мы позаботимся о вашей техники, и вернем ее в лучшем виде.</p>
+						</div>
+						<div class="buttons">
+							<button>Заказать звонок</button>
+							<button>Узнать больше</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="slide2">
+			<div class="container-fluid">
+				<div class="container">
+					<div class="row">
+						<div class="title">
+							<h1>Ремонт компьютерной техники</h1>
+						</div>
+						<div class="description">
+							<p>Просто свяжитесь с нами и мы позаботимся о вашей техники, и вернем ее в лучшем виде.</p>
+						</div>
+						<div class="buttons">
+							<button>Заказать звонок</button>
+							<button>Узнать больше</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="about_us">
+		<div class="container">
+			<div class="row">
+				<div class="title col-12">
+					<h2>О нашем сервисе</h2>
+				</div>
+				<div class="description">
+					<p>Что бы не случилось в вашим устройством. Мы сможем это починить. Выберите наиболее подходящее вам
+						из готовых решений что бы получить больше инофрмации по вашей проблеме.</p>
+				</div>
+				<div class="advanced col-lg-3 col-3">
+					<div class="item">
+						<div class="description">
+							<i class="fa fa-desktop" aria-hidden="true"></i>
+							<h3>Ремонт компьютеров</h3>
+							<p>Наша команда высоко квалифицированных специалистов готова позоботится об вашем
+								компьютере.
+							</p>
+							<a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="advanced col-lg-3 col-3">
+					<div class="item">
+						<div class="description">
+							<i class="fa fa-building-o" aria-hidden="true"></i>
+							<h3>Ремонт телефонов</h3>
+							<p>Мы можем чинить устройства со 100% пользовательской кастомизацией и предлагаем гарантию
+								1,5
+								месяца </p>
+							<a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="advanced col-lg-3 col-3">
+					<div class="item">
+						<div class="description">
+							<i class="fa fa-desktop" aria-hidden="true"></i>
+							<h3>Ремонт ноутбуков</h3>
+							<p>Мы можем починить любые типы ноутбуков надежно и в короткие сроки.</p>
+							<a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="advanced col-lg-3 col-3">
+					<div class="item">
+						<div class="description">
+							<i class="fa fa-building-o" aria-hidden="true"></i>
+							<h3>Ремонт планшетов</h3>
+							<p>Мы можем предоставить ремонт лучшего качества любому типу устройств и бесплатно
+								диагностировать
+								проблему.</p>
+							<a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="experience">
+		<div class="container">
+			<div class="row">
+				<div class="image col-lg-6 col-6">
+					<img src="img/exp.jpg" alt="experienc_image">
+				</div>
+				<div class="description col-lg-6 col-6">
+					<div class="title">
+						<span>12</span>
+						<h2>Лет опыта в ремонте сломаных устройств</h2>
+					</div>
+					<div class="about">
+						<p>Restore is a U.S based computer repair service center. Basically we repair all major brands
+							of PCs, Laptops, Smartphone, Tablet and Gaming console devices issues. We provide the
+							services by well trained, skillful and friendly stuff. Our skill have been tested over the
+							years.</p>
+						<p>We’re not only here to fix your device but also make sure you are informed and comfortable
+							with the whole process. We’ll keep you updated and you feel comfortable with our services.
+						</p>
+					</div>
+					<div class="baners">
+						<h3>Свяжитесь с нами</h3>
+						<button>
+							<i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+79000000000">+79000000000</a>
+						</button>
+						<button>
+							<span>24/7</span> Пон.-Пят.
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="process container-fluid">
+		<div class="container">
+			<div class="row">
+				<div class="title col-12">
+					<h2>Как мы работаем</h2>
+				</div>
+				<div class="description col-12">
+					<p>Самый легкий способ отремонтировать сломаную технику</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="item col-lg-3 col-3">
+					<div class="title">
+						<span>1</span>
+						<h3>Оставте технику нам</h3>
+					</div>
+					<p>Оставте нам устройство которое нуждается в ремонте.</p>
+				</div>
+				<div class="item col-lg-3 col-3">
+					<div class="title">
+						<span>2</span>
+						<h3>Быстрый ремонт</h3>
+					</div>
+					<p>Мы позаботемся о сломанной технике.</p>
+				</div>
+				<div class="item col-lg-3 col-3">
+					<div class="title">
+						<span>3</span>
+						<h3>Возврат устройства</h3>
+					</div>
+					<p>После быстрого ремонта, мы вернеем устройство вам.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+	<div class="callback">
+		<div class="container">
+			<div class="row">
+				<div class="image col-lg-6 col-6">
+					<img src="img/exp.jpg" alt="">
+				</div>
+				<div class="description col-lg-6 col-6">
+					<div class="title">
+						<h2>Свяжитесь с нами</h2>
+						<p>Опишите свою проблему и мы вам перезвоним.</p>
+					</div>
+					<form action="send.php">
+						<input type="text" placeholder="Введите ваше имя">
+						<input type="text" placeholder="Введите ваш телефон">
+						<textarea name="message" id="message" placeholder="Опишите вашу проблему"></textarea>
+						<button type="submit">Отправить</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="counter container-fluid">
+		<div class="container">
+			<div class="row">
+				<div class="title col-12">
+					<h2>Наша статистика</h2>
+				</div>
+				<div class="description col-12">
+					<p>Мы развивающаяся компания по ремнту техники. За годы опыта у нас тысячи отремонтированых
+						устройств. И мы рады предоставлять вам качественные услуги.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="item col-lg-3 col-3">
+					<h3>5750</h3>
+					<p><span>Устройств</span> исправленно</p>
+				</div>
+				<div class="item col-lg-3 col-3">
+					<h3>6325</h3>
+					<p><span>Счастливых</span> клиентов</p>
+				</div>
+				<div class="item col-lg-3 col-3">
+					<h3>12</h3>
+					<p><span>Лет</span> опыта</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="opinion">
+		<div class="container">
+			<div class="row">
+				<div class="description">
+					<h2>Отзовы наших клиентов</h2>
+				</div>
+				<div class="image"><img src="img/client_image.jpg" alt="Image_client"></div>
+				<div class="slider_opinion">
+					<div class="item">
+						<p>A reliable repair service is hard to find but these guys rock. They’re very professional and
+							helpful. They kept me update throughout the entire process of my computer being fixed.
+							Highly recommended.</p>
+						<h4>Harry Williams</h4>
+					</div>
+					<div class="item">
+						<p>A reliable repair service is hard to find but these guys rock. They’re very professional and
+							helpful. They kept me update throughout the entire process of my computer being fixed.
+							Highly recommended.</p>
+						<h4>Harry Williams</h4>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<footer>
+		<div class="container-fluid footer_top">
+			<div class="container">
+				<div class="row ">
+					<div class="service_title col-4 ">
+						<div class="logotype">
+							<img src="img/logo-footer.png" alt="logotype">
+						</div>
+						<div class="description">
+							<p>Restore это центр починки электронной техники. В основном мы занимаемся ремонтом
+								компьютеров, ноутбуков, планшетов, различных накопителей и игровых консолей.</p>
 						</div>
 						<div class="social">
 							<ul>
@@ -89,25 +328,100 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-3">
-						<h3>Информация сервиса</h3>
+					<div class="col-3 service_info">
+						<div class="title">
+							<h3>Информация об сервиса</h3>
+						</div>
+						<div class="description">
+							<div class="adres">
+								<p>Адрес:</p>
+								<p>Краснодар. ул. Бершанская 19\а</p>
+							</div>
+							<div class="phone_email">
+								<div class="phone">
+									<p>Телефон:</p>
+									<p><a href="tel:+79000000000">+79000000000</a></p>
+								</div>
+								<div class="email">
+									<p>Почта:</p>
+									<p><a href="mailto:example@example.com">example@example.com</a></p>
+								</div>
+							</div>
+							<div class="hours">
+								<p>Часы работы:</p>
+								<p>Пон. - Суб.<br> (9:00 - 18:00)</p>
+							</div>
+						</div>
 					</div>
-					<div class="col-2">
-						<h3>Услуги</h3>
+					<div class="col-2 service_serv">
+						<div class="title">
+							<h3>Услуги</h3>
+						</div>
+						<div class="description">
+							<ul>
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт
+										ноутбука</a></li>
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт
+										iPhone</a></li>
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт iPad</a>
+								</li>
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт
+										планшета</a></li>
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт
+										смарфона</a></li>
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт
+										гаджетов</a></li>
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Востановление
+										данных</a></li>
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Резервное
+										копирование</a></li>
+							</ul>
+						</div>
 					</div>
-					<div class="col-3">
-						<h3>Обратная связь</h3>
+					<div class="col-3 callback">
+						<div class="title">
+							<h3>Обратная связь</h3>
+						</div>
+						<div class="description">
+							<p>Вы можете оставить нам свой телефон или адрес электронной почты. Мы с вами свяжемся в
+								скором времени.</p>
+							<form action="send.php" class="email">
+								<input type="email" placeholder="example@example.com" required><button type="submit"><i
+										class="fa fa-chevron-right" aria-hidden="true"></i></button>
+							</form>
+							<form action="send.php">
+								<input type="text" placeholder="+7(900) 000-00-00" required><button type="submit"><i
+										class="fa fa-chevron-right" aria-hidden="true"></i></button>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row footer_lower">
-
+		<div class="container-fluid footer_lower">
+			<div class="container">
+				<div class="row">
+					<div class="copyright">
+						<p>Copyright © 2019. Все права принадлежат Restore.</p>
+					</div>
+					<div class="footer_navigation">
+						<nav>
+							<ul>
+								<li><a href="#">Главная</a></li>
+								<li><a href="#">О нас</a></li>
+								<li><a href="#">Услуги</a></li>
+								<li><a href="#">Галерея</a></li>
+								<li><a href="#">Контакты</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
 			</div>
 		</div>
 	</footer>
 	<script src="js/libs.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
