--- a/app/index.html
+++ b/app/index.html
@@ -5,42 +5,44 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>Restore - Главная</title>
 	<link rel="stylesheet" href="css/libs.min.css">
+	<link rel="stylesheet" href="libs/magnific-popup/dist/magnific-popup.css">
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/header_footer.css">
 	<link rel="stylesheet" href="css/main.css">
+
 </head>
 
 <body>
 	<header>
 		<div class="container">
 			<div class="row head_top">
-				<div class="col-3 col-xl-3 logotype">
+				<div class="logotype col-12 col-xl-3 ">
 					<img src="img/logo.png" alt="logotype">
 				</div>
-				<div class="col-2 col-xl-2 info">
+				<div class="col-6 col-xl-2 info">
 					<div class="icon"><img src="img/basic_home.png" alt="Home"></div>
 					<div class="description">
 						<p>Наш адрес</p>
-						<h2>Бершанская 19а</h2>
+						<h2>г. Краснодар ул. Мира д. 88</h2>
 					</div>
 				</div>
-				<div class="col-2 col-xl-2 info">
+				<div class="col-6 col-xl-2 info">
 					<div class="icon"><img src="img/basic_smartphone.png" alt="Smartphone"></div>
 					<div class="description">
 						<p>Наш телефон</p>
-						<h2><a href="tel:+79000000000">+79000000000</a></h2>
+						<h2><a href="tel:+79815672784">+79815672784</a></h2>
 					</div>
 				</div>
-				<div class="col-2 col-xl-2 info">
+				<div class="col-12 col-xl-2 info">
 					<div class="icon"><img src="img/basic_clock.png" alt="Clock"></div>
 					<div class="description">
 						<p>Пон. - Суб.</p>
 						<h2>9:00 - 18:00</h2>
 					</div>
 				</div>
-				<div class="col-3 col-xl-3 order_call">
+				<div class="col-12 col-xl-3 order_call">
 					<button>Заказать звонок</button>
 				</div>
 			</div>
@@ -48,24 +50,33 @@
 		<div class="container-fluid">
 			<div class="container">
 				<div class="row head_lower">
-					<nav class="col-8 header_navigation">
-						<ul>
-							<li class="active"><a href="#">Главная</a></li>
-							<li><a href="#">О нас</a></li>
-							<li><a href="#">Услуги</a></li>
-							<li><a href="#">Галерея</a></li>
-							<li><a href="#">Контакты</a></li>
-						</ul>
+					<nav class="col-6 header_navigation navbar navbar-expand-lg">
+						<button class="navbar-toggler" type="button" data-toggle="collapse"
+							data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+							aria-expanded="false" aria-label="Toggle navigation">
+							<i class="fa fa-bars" aria-hidden="true"></i>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							<ul class="navbar-nav mr-auto">
+								<li class="nav-item active"><a href="#" class="nav-link">Главная</a></li>
+								<li class="nav-item"><a href="about_us.html" class="nav-link">О нас</a></li>
+								<li class="nav-item"><a href="services.html" class="nav-link">Услуги</a></li>
+								<li class="nav-item"><a href="gallery.html" class="nav-link">Галерея</a></li>
+								<li class="nav-item"><a href="contact.html" class="nav-link">Контакты</a></li>
+							</ul>
 					</nav>
-					<div class="social col-2">
+					<div class="social col-lg-2 col-6">
 						<ul>
-							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+							<li><a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.facebook.com/"><i class="fa fa-facebook"
+										aria-hidden="true"></i></a></li>
+							<li><a href="https://ru.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 	</header>
 	<div class="slider">
@@ -116,7 +127,7 @@
 					<p>Что бы не случилось в вашим устройством. Мы сможем это починить. Выберите наиболее подходящее вам
 						из готовых решений что бы получить больше инофрмации по вашей проблеме.</p>
 				</div>
-				<div class="advanced col-lg-3 col-3">
+				<div class="advanced col-lg-3 col-6">
 					<div class="item">
 						<div class="description">
 							<i class="fa fa-desktop" aria-hidden="true"></i>
@@ -128,7 +139,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="advanced col-lg-3 col-3">
+				<div class="advanced col-lg-3 col-6">
 					<div class="item">
 						<div class="description">
 							<i class="fa fa-building-o" aria-hidden="true"></i>
@@ -140,7 +151,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="advanced col-lg-3 col-3">
+				<div class="advanced col-lg-3 col-6">
 					<div class="item">
 						<div class="description">
 							<i class="fa fa-desktop" aria-hidden="true"></i>
@@ -150,7 +161,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="advanced col-lg-3 col-3">
+				<div class="advanced col-lg-3 col-6">
 					<div class="item">
 						<div class="description">
 							<i class="fa fa-building-o" aria-hidden="true"></i>
@@ -168,10 +179,10 @@
 	<div class="experience">
 		<div class="container">
 			<div class="row">
-				<div class="image col-lg-6 col-6">
+				<div class="image col-lg-6 d-none d-lg-block">
 					<img src="img/exp.jpg" alt="experienc_image">
 				</div>
-				<div class="description col-lg-6 col-6">
+				<div class="description col-lg-6 col-12">
 					<div class="title">
 						<span>12</span>
 						<h2>Лет опыта в ремонте сломаных устройств</h2>
@@ -209,21 +220,21 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="item col-lg-3 col-3">
+				<div class="item col-lg-3 col-12">
 					<div class="title">
 						<span>1</span>
 						<h3>Оставте технику нам</h3>
 					</div>
 					<p>Оставте нам устройство которое нуждается в ремонте.</p>
 				</div>
-				<div class="item col-lg-3 col-3">
+				<div class="item col-lg-3 col-12">
 					<div class="title">
 						<span>2</span>
 						<h3>Быстрый ремонт</h3>
 					</div>
 					<p>Мы позаботемся о сломанной технике.</p>
 				</div>
-				<div class="item col-lg-3 col-3">
+				<div class="item col-lg-3 col-12">
 					<div class="title">
 						<span>3</span>
 						<h3>Возврат устройства</h3>
@@ -234,13 +245,13 @@
 		</div>
 	</div>
 	</div>
-	<div class="callback">
+	<div class="call_back">
 		<div class="container">
 			<div class="row">
-				<div class="image col-lg-6 col-6">
+				<div class="image col-lg-6 d-none d-lg-block">
 					<img src="img/exp.jpg" alt="">
 				</div>
-				<div class="description col-lg-6 col-6">
+				<div class="description col-lg-6 col-12">
 					<div class="title">
 						<h2>Свяжитесь с нами</h2>
 						<p>Опишите свою проблему и мы вам перезвоним.</p>
@@ -267,15 +278,15 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="item col-lg-3 col-3">
+				<div class="item col-lg-3 col-12">
 					<h3>5750</h3>
 					<p><span>Устройств</span> исправленно</p>
 				</div>
-				<div class="item col-lg-3 col-3">
+				<div class="item col-lg-3 col-12">
 					<h3>6325</h3>
 					<p><span>Счастливых</span> клиентов</p>
 				</div>
-				<div class="item col-lg-3 col-3">
+				<div class="item col-lg-3 col-12">
 					<h3>12</h3>
 					<p><span>Лет</span> опыта</p>
 				</div>
@@ -285,22 +296,121 @@
 	<div class="opinion">
 		<div class="container">
 			<div class="row">
-				<div class="description">
-					<h2>Отзовы наших клиентов</h2>
-				</div>
-				<div class="image"><img src="img/client_image.jpg" alt="Image_client"></div>
-				<div class="slider_opinion">
-					<div class="item">
-						<p>A reliable repair service is hard to find but these guys rock. They’re very professional and
-							helpful. They kept me update throughout the entire process of my computer being fixed.
-							Highly recommended.</p>
-						<h4>Harry Williams</h4>
+				<div class="description col-12 col-lg-6">
+					<h2>Отзывы наших клиентов</h2>
+					<div class="slider_opinion">
+						<div class="item">
+							<p>Спасибо за профессионализм, ребята!
+								Очень приятно было получить квалифицированную помощь, особенно после предыдущих
+								неудачных мытарств по сервисным центрам нашего города. Особая благодарность Никите,
+								который занимался нашим компом! Приехал, забрал, разобрался, отзвонился — разъяснил. А
+								после ремонта привёз, установил, настроил. Супер! Всё работает как надо! Спасибо! Нашла
+								для себя любимый сервисный центр!</p>
+							<h4>Любовь Владимировна</h4>
+						</div>
+						<div class="item">
+							<p>Было с чем сравнить. До этого по гарантии отдал МП (материнскую плату — прим. редактора)в
+								другой СЦ, в итоге они погнули мне контакты на МП и отказали в гарантии.
+								По совету друга обратился в данный СЦ. Быстро (за 2 дня), качественно и недорого
+								выпрямили контакты. Обслуживание клиентов на уровне (дали кучу скидок).
+								Надеюсь мы будем видеться очень редко Но всем друзьям посоветую.</p>
+							<h4>Дмитрий Кравцов</h4>
+						</div>
 					</div>
-					<div class="item">
-						<p>A reliable repair service is hard to find but these guys rock. They’re very professional and
-							helpful. They kept me update throughout the entire process of my computer being fixed.
-							Highly recommended.</p>
-						<h4>Harry Williams</h4>
+				</div>
+				<div class="image col-lg-6 d-none d-lg-block"><img src="img/client_image.jpg" alt="Image_client"></div>
+			</div>
+		</div>
+	</div>
+	</div>
+	<div class="gallery">
+		<div class="container">
+			<div class="row">
+				<div class="title col-12">
+					<h2>Наша галерея ремонтов</h2>
+				</div>
+				<div class="description col-12">
+					<p>Посмотрите на нашу фото галерею чтобы вы могли получить краткое представление о нашей
+						деятельности. Также вы можете заметить некоторые причины почему наши клиенты любят нас. Так что
+						посмотрите сами!</p>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="item col-lg-3 col-12"><a href="img/gallery_1.jpg"" class=" popup"><img
+							src="img/gallery_1.jpg" alt="gallery_1"></a></div>
+				<div class="item col-lg-3 col-12"><a href="img/gallery_2.jpg" class="popup"><img src="img/gallery_2.jpg"
+							alt="gallery_2"></a></div>
+				<div class="item col-lg-6 col-12""><a href=" img/gallery_3.jpg" class="popup"> <img
+						src="img/gallery_3.jpg" alt="gallery_3"></a></div>
+			</div>
+			<div class="row">
+				<div class="item col-lg-6 col-12"><a href="img/gallery_4.jpg" class="popup"><img src="img/gallery_4.jpg"
+							alt="gallery_4"></a></div>
+				<div class="item col-lg-3 col-12"><a href="img/gallery_5.jpg" class="popup"><img src="img/gallery_5.jpg"
+							alt="gallery_5"></a></div>
+				<div class="item col-lg-3 col-12"><a href="img/gallery_6.jpg" class="popup"><img src="img/gallery_6.jpg"
+							alt="gallery_6"></a></div>
+			</div>
+		</div>
+	</div>
+	<div class="team">
+		<div class="container">
+			<div class="row">
+				<div class="title col-12">
+					<h2>Наша команда</h2>
+				</div>
+				<div class="description col-12">
+					<p>
+						Вот наша клалифицированная и опытная команда. Они каждый специализируются на
+						своей конкретной области. Вот почему вы получаете качественные услуги ремонта.
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="item col-lg-3 col-md-6 col-12">
+					<a href="123"><img src="img/team_1.jpg" alt="team_1"></a>
+					<h4>Александр Горняков</h4>
+					<p>Специалист по заказам</p>
+					<div class="social">
+						<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					</div>
+				</div>
+				<div class="item col-lg-3 col-md-6 col-12">
+					<a href="#"><img src="img/team_2.jpg" alt="team_2"></a>
+					<h4>Александра Кривова</h4>
+					<p>Главный инженер</p>
+					<div class="social">
+						<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					</div>
+				</div>
+				<div class="item col-lg-3 col-md-6 col-12">
+					<a href="#"><img src="img/team_3.jpg" alt="team_3"></a>
+					<h4>Игорь Абакян</h4>
+					<p>Технический менеджер</p>
+					<div class="social">
+						<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					</div>
+				</div>
+				<div class="item col-lg-3 col-md-6 col-12">
+					<a href="#"><img src="img/team_4.jpg" alt="team_4"></a>
+					<h4>Павел Лунгин</h4>
+					<p>Офисный менеджер</p>
+					<div class="social">
+						<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 					</div>
 				</div>
 			</div>
@@ -310,7 +420,7 @@
 		<div class="container-fluid footer_top">
 			<div class="container">
 				<div class="row ">
-					<div class="service_title col-4 ">
+					<div class="service_title col-lg-4 col-12 ">
 						<div class="logotype">
 							<img src="img/logo-footer.png" alt="logotype">
 						</div>
@@ -320,31 +430,36 @@
 						</div>
 						<div class="social">
 							<ul>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.facebook.com/"><i class="fa fa-facebook"
+											aria-hidden="true"></i></a></li>
+								<li><a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+								</li>
+								<li><a href="https://www.pinterest.ru/"><i class="fa fa-pinterest-p"
+											aria-hidden="true"></i></a></li>
+								<li><a href="https://www.instagram.com/"><i class="fa fa-instagram"
+											aria-hidden="true"></i></a></li>
+								<li><a href="https://ru.linkedin.com/"><i class="fa fa-linkedin"
+											aria-hidden="true"></i></a></li>
 							</ul>
 						</div>
 					</div>
-					<div class="col-3 service_info">
+					<div class="col-lg-3 col-12 service_info">
 						<div class="title">
 							<h3>Информация об сервиса</h3>
 						</div>
 						<div class="description">
 							<div class="adres">
 								<p>Адрес:</p>
-								<p>Краснодар. ул. Бершанская 19\а</p>
+								<p>г. Краснодар ул. Мира д. 88</p>
 							</div>
 							<div class="phone_email">
 								<div class="phone">
 									<p>Телефон:</p>
-									<p><a href="tel:+79000000000">+79000000000</a></p>
+									<p><a href="tel:+79815672784">+79815672784</a></p>
 								</div>
 								<div class="email">
 									<p>Почта:</p>
-									<p><a href="mailto:example@example.com">example@example.com</a></p>
+									<p><a href="mailto:Restore@yandex.ru">Restore@yandex.ru</a></p>
 								</div>
 							</div>
 							<div class="hours">
@@ -353,7 +468,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-2 service_serv">
+					<div class="col-lg-2 col-12 service_serv">
 						<div class="title">
 							<h3>Услуги</h3>
 						</div>
@@ -378,7 +493,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-3 callback">
+					<div class="col-lg-3 col-12 callback">
 						<div class="title">
 							<h3>Обратная связь</h3>
 						</div>
@@ -404,14 +519,14 @@
 					<div class="copyright">
 						<p>Copyright © 2019. Все права принадлежат Restore.</p>
 					</div>
-					<div class="footer_navigation">
+					<div class="footer_navigation d-none d-lg-block">
 						<nav>
 							<ul>
 								<li><a href="#">Главная</a></li>
-								<li><a href="#">О нас</a></li>
-								<li><a href="#">Услуги</a></li>
-								<li><a href="#">Галерея</a></li>
-								<li><a href="#">Контакты</a></li>
+								<li><a href="about_us.html">О нас</a></li>
+								<li><a href="services.html">Услуги</a></li>
+								<li><a href="gallery.html">Галерея</a></li>
+								<li><a href="contact.html">Контакты</a></li>
 							</ul>
 						</nav>
 					</div>
